# chesster

./: .gitignore  CMakeLists.txt  README.md  build.sh  game.cpp  test.sh
chess-engine/: Board.hpp
scripts/: board_to_hex.py
src/: Board.hpp  ChessTypes.hpp  Masks.hpp  Move.hpp  Utils.hpp
tests/: CMakeLists.txt  board_test.cpp  masks_test.cpp  moves_test.cpp  utils_test.cpp
